recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return 0;
             ^Min:5: warning: enclosing method lambda has result type Unit: return value discarded
      return 0;
      ^Min:12: error: type mismatch;
 found   : Unit
 required: Int
  return lambda(l,l.head);
               ^